--- a/examples/bootstrap.html
+++ b/examples/bootstrap.html
@@ -10,6 +10,8 @@
   <script src="../test/vendor/javascripts/underscore-1.4.4.js"></script>
   <script src="../test/vendor/javascripts/backbone-1.0.0.js"></script>
 
+  <script src="//localhost:35729/livereload.js"></script>
+
   <!-- Uses JQUI for the effects only :/ -->
   <script src="../test/vendor/javascripts/jquery-ui-1.10.2.custom.js"></script>
 
