--- a/examples/qtip.html
+++ b/examples/qtip.html
@@ -14,6 +14,8 @@
   <script src="../test/vendor/javascripts/backbone-1.0.0.js"></script>
   <script src="../test/vendor/javascripts/jquery.qtip.js"></script>
 
+  <script src="//localhost:35729/livereload.js"></script>
+
   <!-- Uses JQUI for the effects only :/ -->
   <script src="../test/vendor/javascripts/jquery-ui-1.10.2.custom.js"></script>
 
