updated version numbers ready for release 0.1.7

--- a/examples/bootstrap.html
+++ b/examples/bootstrap.html
@@ -42,6 +42,30 @@
     closeButton: true,
     closeButtonClass : 'glyphicon glyphicon-remove',
     target: $('#main-heading'),
+    my: 'left top',
+    at: 'right top',
+    cover: true,
+    coverClass: 'tour-override',
+    highlightClass: 'highlight-override'
+  },{
+    content: '<p>Check Close button. Some jiberish here lkjhadsflkjjagdslkfgasdfkjgaksjfdhgkjadshgfkadsfkjhgfdsa</p>',
+    highlightTarget: true,
+    nextButton: true,
+    closeButton: true,
+    closeButtonClass : 'glyphicon glyphicon-remove',
+    target: $('#main-heading'),
+    my: 'right top',
+    at: 'left top',
+    cover: true,
+    coverClass: 'tour-override',
+    highlightClass: 'highlight-override'
+  },{
+    content: '<p>Check Close button. Some jiberish here lkjhadsflkjjagdslkfgasdfkjgaksjfdhgkjadshgfkadsfkjhgfdsa</p>',
+    highlightTarget: true,
+    nextButton: true,
+    closeButton: true,
+    closeButtonClass : 'glyphicon glyphicon-remove',
+    target: $('#main-heading'),
     my: 'top center',
     at: 'bottom center',
     cover: true,
